# TG_PLUS

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  pyproject.toml
scripts/: docker-entrypoint.sh
src/: __main__.py  app_config.py  runners.py
src/factory/: __init__.py  app_config.py  client.py  database.py
src/services/database/relational_db/: base.py  postgres.py
src/telegram/user_bot/handlers/: __init__.py  on_delete_message.py  on_message.py
src/telegram/user_bot/utils/commands_executor/commands/: base_command.py  code_command.py  contact_command.py  info_command.py  json_command.py
tools/: create_session.py
